<resources>
    <string name="app_name">TodoApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tvDangKy">Đăng ký tài khoản</string>
    <string name="tvDangNhap">Đăng nhập</string>
    <string name="tvDaCoTaiKhoan">Đã có tài khoản? Đăng nhập</string>
    <string name="tvChuaCotaiKhoan">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="tvTaiKhoan">Tài khoản</string>
    <string name="tvMatKhau">Mật khẩu</string>
    <string name="tvNhapLaiMatKhau">Nhập lại mật khẩu</string>
    <string name="tvBtnDangKy">Đăng ký</string>
    <string name="tvBtnDangNhap">Đăng nhập</string>
    <string name="ghiNhoDangNhap">Ghi nhớ đăng nhập</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lorem_ipsum">
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>