<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/tvDangNhap"
        android:textColor="@color/purple"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taiKhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_taikhoan"
        android:ems="10"
        android:hint="@string/tvTaiKhoan"
        android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
        android:textSize="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/matKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_matkhau"
        android:ems="10"
        android:textSize="16dp"
        android:hint="@string/tvMatKhau"
        android:inputType="textPassword|textAutoCorrect|textCapSentences|textMultiLine"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/taiKhoan"
        app:layout_constraintStart_toStartOf="@+id/taiKhoan"
        app:layout_constraintTop_toBottomOf="@+id/taiKhoan" />

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/purple"
        android:text="@string/tvBtnDangNhap"
        app:layout_constraintEnd_toEndOf="@+id/matKhau"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/matKhau"
        app:layout_constraintTop_toBottomOf="@+id/matKhau" />

    <TextView
        android:id="@+id/chuyenHuongDangKy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:hint="@string/tvChuaCotaiKhoan"
        android:textColorHint="@color/purple"
        app:layout_constraintEnd_toEndOf="@+id/btnDangNhap"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/btnDangNhap"
        app:layout_constraintTop_toBottomOf="@+id/btnDangNhap" />

    <CheckBox
        android:id="@+id/ghiNhoDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ghiNhoDangNhap"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="@+id/matKhau"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/matKhau"
        app:layout_constraintTop_toBottomOf="@+id/matKhau" />
</androidx.constraintlayout.widget.ConstraintLayout>