<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/tvDangKy"
        android:textColor="@color/purple"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taiKhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_taikhoan"
        android:ems="10"
        android:hint="@string/tvTaiKhoan"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/matKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_matkhau"
        android:ems="10"
        android:hint="@string/tvMatKhau"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/taiKhoan"
        app:layout_constraintStart_toStartOf="@+id/taiKhoan"
        app:layout_constraintTop_toBottomOf="@+id/taiKhoan" />

    <EditText
        android:id="@+id/nhapLaiMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_matkhau"
        android:ems="10"
        android:hint="@string/tvNhapLaiMatKhau"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/matKhau"
        app:layout_constraintStart_toStartOf="@+id/matKhau"
        app:layout_constraintTop_toBottomOf="@+id/matKhau" />

    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple"
        android:text="@string/tvBtnDangKy"
        app:layout_constraintEnd_toEndOf="@+id/nhapLaiMatKhau"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/nhapLaiMatKhau"
        app:layout_constraintTop_toBottomOf="@+id/nhapLaiMatKhau" />

    <TextView
        android:id="@+id/chuyenHuongDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tvDaCoTaiKhoan"
        android:textColorHint="@color/purple"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/btnDangKy"
        app:layout_constraintStart_toStartOf="@+id/btnDangKy"
        app:layout_constraintTop_toBottomOf="@+id/btnDangKy" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="131dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/google_keep3316"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>